# OrderSimulator

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  main.yml
libdatabase/: CMakeLists.txt
libdatabase/src/: db.cpp  db.hpp
order_processor/: CMakeLists.txt
order_processor/src/: main.cpp
order_processor/src/processor/: processor.cpp  processor.hpp
order_receiver/: CMakeLists.txt
order_receiver/src/: main.cpp
order_receiver/src/models/: order.hpp
order_receiver/src/receiver/: receiver.cpp  receiver.hpp
restaraunt_api/: go.mod  main.go
tests/: conftest.py  test_functional.py
